# octonews

./: .gitignore  README.md  docker-compose.yml
deduplicator/: Cargo.toml  Dockerfile
deduplicator/src/: main.rs
namextractor/: Dockerfile  pyproject.toml
namextractor/namextractor/: __main__.py  deduplicator.py
queuer/: Cargo.toml  Dockerfile  LICENSE  README.md
queuer/src/: main.rs
rss-importer/: Dockerfile  Pipfile  README.md
rss-importer/rss/: __main__.py  parsers.py  utils.py
tagificator/: Dockerfile  pyproject.toml
tagificator/tagificator/: __main__.py
