[package]
name = "deduplicator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.21.0", features = ["streams"] }
env_logger = "0.9.0"
log = "0.4.14"
serde_json = {version = "1.0"}