[tool.poetry]
name = "namextractor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
nametract = "^1.1.2"
hiredis = "^2.0.0"
redis = "^3.5.3"
loguru = "^0.5.3"
textdistance = {extras = ["extras"], version = "^4.2.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
