[tool.poetry]
name = "tagificator"
version = "0.1.0"
description = ""
authors = ["keddad <keddad@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
redis = "^3.5.3"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
